fixed the card component alignment on landing page

--- a/src/styles/LandingPageStyles/index.less
+++ b/src/styles/LandingPageStyles/index.less
@@ -120,17 +120,24 @@
   margin-top: -25%;
   background: #156a70;
   padding-bottom: 5%;
+  
+}
+.landing-fourth-container-text{
+  margin-right: 3%;
+  margin-left: 1%;
 }
 
 .description {
   font-family: 'Montserrat', sans-serif!important;
   margin-bottom: 2%!important;
+
   
 
 }
 
 .brianne{
   font-family: 'Staatliches', cursive!important;
+  border-radius: 30px;
 }
 
 .landing-third-container-pic {
@@ -142,21 +149,6 @@
   width: 65%;
 }
 
-// .description {
-//   background-color: #eeedd9;
-//   padding: 2%;
-//   border-radius: 10px;
-//   margin: 2% 10%;
-//   border: 2px solid black;
-// }
-
-// .brianne {
-//   background-color: #eeedd9;
-//   padding: 2%;
-//   border-radius: 10px;
-//   margin: 2% 10%;
-//   border: 2px solid black;
-// }
 
 
 
@@ -166,9 +158,6 @@
 
 
 // ------------
-
-
-
 //** Landing Page Styles - TABLET **//
 
 @media only screen and (max-width: 1000px) {
